# raybird

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yml
include/: collision.h  game.h  particles.h  pipes.h  player.h  renderer.h
src/: collision.c  game.c  main.c  particles.c  pipes.c  player.c  renderer.c
